[gd_scene load_steps=19 format=3 uid="uid://c5sa0nak8mkk1"]

[ext_resource type="Script" path="res://Scenes/Gameplay/gameplay.gd" id="1_b2lgf"]
[ext_resource type="Texture2D" uid="uid://d32it1fpa760l" path="res://Media/Images/Menu_Assets/Power-White.png" id="5_84fro"]
[ext_resource type="Texture2D" uid="uid://by2thjfrhbir6" path="res://Media/Images/Primary_Assets/Pieces/Ruby_Circle.png" id="5_wpxfm"]
[ext_resource type="Texture2D" uid="uid://bstk8r8r1nyy8" path="res://Media/Images/Primary_Assets/Pieces/Selected/Ruby_Circle-toggle.png" id="6_qeetc"]
[ext_resource type="Texture2D" uid="uid://b6s7ddyt4vpdl" path="res://Media/Images/Menu_Assets/Power-White-select.png" id="6_rai3q"]
[ext_resource type="Texture2D" uid="uid://b2h6jv122fbpp" path="res://Media/Images/Primary_Assets/Pieces/Pearl_Circle.png" id="7_ttxx1"]
[ext_resource type="Texture2D" uid="uid://c2a7d820i656g" path="res://Media/Images/Primary_Assets/Pieces/Selected/Pearl_Circle-toggle.png" id="8_fhk0q"]
[ext_resource type="Texture2D" uid="uid://wc1hl265weuc" path="res://Media/Images/Primary_Assets/Pieces/Amber_Circle.png" id="9_k31o1"]
[ext_resource type="Texture2D" uid="uid://el4r481si311" path="res://Media/Images/Primary_Assets/Pieces/Selected/Amber_Circle-toggle.png" id="10_q4drv"]
[ext_resource type="Texture2D" uid="uid://chf7a533ujunl" path="res://Media/Images/Primary_Assets/Pieces/Jade_Circle.png" id="11_uyenj"]
[ext_resource type="Texture2D" uid="uid://x3l0qew3p8s5" path="res://Media/Images/Primary_Assets/Pieces/Selected/Jade_Circle-toggle.png" id="12_imtxl"]
[ext_resource type="Texture2D" uid="uid://l66jirn8ws17" path="res://Media/Images/Primary_Assets/Pieces/Amalgam_Circle.png" id="13_xhj1v"]
[ext_resource type="Texture2D" uid="uid://xejrhvx51yyp" path="res://Media/Images/Primary_Assets/Pieces/Selected/Amalgam_Circle-toggle.png" id="14_syld6"]
[ext_resource type="Texture2D" uid="uid://deuo5uemeb5gi" path="res://Media/Images/Primary_Assets/Pieces/Void_Circle.png" id="15_fsgxl"]
[ext_resource type="Texture2D" uid="uid://cs5r66rlvab72" path="res://Media/Images/Primary_Assets/Pieces/Selected/Void_Circle-toggle.png" id="16_ewnsh"]
[ext_resource type="Texture2D" uid="uid://pjur8py82ojg" path="res://Media/Images/Primary_Assets/Pieces/Portal_Circle.png" id="17_0tymk"]
[ext_resource type="Texture2D" uid="uid://curysdus50hbo" path="res://Media/Images/Primary_Assets/Pieces/Selected/Portal_Circle-toggle.png" id="18_dik75"]
[ext_resource type="Texture2D" uid="uid://disnqxu83yp7u" path="res://Media/Images/Primary_Assets/Boards/Board_Standard.png" id="18_i4yni"]

[node name="Gameplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b2lgf")

[node name="Exit" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -67.0
offset_top = -59.0
offset_right = -32.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("5_84fro")
texture_hover = ExtResource("6_rai3q")
ignore_texture_size = true
stretch_mode = 5

[node name="PieceSelectors" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -660.0
offset_top = -450.0
offset_right = -560.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2

[node name="RubyBtn" type="TextureButton" parent="PieceSelectors"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource("5_wpxfm")
texture_pressed = ExtResource("6_qeetc")
ignore_texture_size = true
stretch_mode = 5

[node name="PearlBtn" type="TextureButton" parent="PieceSelectors"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource("7_ttxx1")
texture_pressed = ExtResource("8_fhk0q")
ignore_texture_size = true
stretch_mode = 5

[node name="AmberBtn" type="TextureButton" parent="PieceSelectors"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource("9_k31o1")
texture_pressed = ExtResource("10_q4drv")
ignore_texture_size = true
stretch_mode = 5

[node name="JadeBtn" type="TextureButton" parent="PieceSelectors"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource("11_uyenj")
texture_pressed = ExtResource("12_imtxl")
ignore_texture_size = true
stretch_mode = 5

[node name="AmalgamBtn" type="TextureButton" parent="PieceSelectors"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource("13_xhj1v")
texture_pressed = ExtResource("14_syld6")
ignore_texture_size = true
stretch_mode = 5

[node name="VoidBtn" type="TextureButton" parent="PieceSelectors"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource("15_fsgxl")
texture_pressed = ExtResource("16_ewnsh")
ignore_texture_size = true
stretch_mode = 5

[node name="PortalBtn" type="TextureButton" parent="PieceSelectors"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource("17_0tymk")
texture_pressed = ExtResource("18_dik75")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -480.0
offset_right = 480.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("18_i4yni")
expand_mode = 1

[node name="BoardGrid" type="GridContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -500.0
offset_right = 500.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 25

[node name="PiecesContainer" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="toggled" from="PieceSelectors/RubyBtn" to="." method="_on_ruby_btn_toggled"]
[connection signal="toggled" from="PieceSelectors/PearlBtn" to="." method="_on_pearl_btn_toggled"]
[connection signal="toggled" from="PieceSelectors/AmberBtn" to="." method="_on_amber_btn_toggled"]
[connection signal="toggled" from="PieceSelectors/JadeBtn" to="." method="_on_jade_btn_toggled"]
[connection signal="toggled" from="PieceSelectors/AmalgamBtn" to="." method="_on_amalgam_btn_toggled"]
[connection signal="toggled" from="PieceSelectors/VoidBtn" to="." method="_on_void_btn_toggled"]
[connection signal="toggled" from="PieceSelectors/PortalBtn" to="." method="_on_portal_btn_toggled"]
